# WebGL2Experiments

./: AtmosphereScatteringShader.js  ClearShader.js  CombineShader.js  FirstPassShader.js  Geometry.js  LastPassShader.js  Planet.js  README.md  RenderEngine.js  StandardShader.js  SurfaceShader.js  geometry.js  index.html  main.js
prototype1/: AtmosphereDensityShader.js  AtmosphereScatteringShader.js  (+9 more)
prototype2/: Cargo.toml  Makefile  build.rs
prototype2/src/: bounding_volume.rs  camera.rs  controls.rs  main.rs  particle.rs  planet.rs  renderer.rs  star.rs
prototype2/src/assets/: gltf.rs  mesh.rs  mipmap.rs  mod.rs  texture.rs
prototype2/src/shader/: ambient_light_frag.glsl  atmosphere_pre_comp.glsl  compute_instance_matrices_comp.glsl  compute_mvp_matrix_comp.glsl  mipmap_2d_general_comp.glsl  mipmap_2d_pot_comp.glsl  mipmap_3d_general_comp.glsl  mipmap_3d_pot_comp.glsl  parallel_light_frag.glsl  parallel_light_vert.glsl  particle_animation_comp.glsl  particle_frag.glsl  particle_vert.glsl  planet_atmosphere_frag.glsl  planet_surface_frag.glsl  point_light_frag.glsl  point_light_vert.glsl  post_processing_pass_frag.glsl  screen_quad_vert.glsl  shadow_pass_vert.glsl  sphere_billboard_vert.glsl  sphere_shadow_frag.glsl  spot_light_frag.glsl  spot_light_vert.glsl  star_atmosphere_frag.glsl  star_surface_frag.glsl  surface_pass_frag.glsl  surface_pass_vert.glsl  uv_sphere_billboard_vert.glsl
prototype2/src/shader/include/: billboard_vert.glsl  camera_uniforms.glsl  hash_noise.glsl  light_shared.glsl  ray_tracing_frag.glsl  simplex_noise.glsl  voronoi_noise.glsl
