[package]
name = "prototype2"
version = "0.1.0"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_winit = { git = "https://github.com/hecrj/iced" }
iced_wgpu = { git = "https://github.com/hecrj/iced" }
glam = "0.9.4"
image = "0.23.10"
# rodio = "0.12.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
rayon = "1.4.0"
# legion = "0.3.1"
# bevy_ecs = "0.2.1"
# bevy_transform = "0.2.1"
num-integer = "0.1"
rand = { version = "0.7.3", features = ["small_rng"]}

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
